@@ -84,6 +84,18 @@ PKG_CHECK_MODULES(LIBGNOME, glib-2.0 >= 1.3.7 gmodule-2.0 >= 1.3.7 gnome-vfs-2.0
 libxml-2.0 >= 2.4.1 libbonobo-2.0 >= 1.100.0 gconf-2.0 >= 1.1.1 \
 $AUDIOFILE_MODULE $ESOUND_MODULE)
 
+
+AC_PATH_PROG(XSLT_CONFIG,xslt-config,no)
+if test x$XSLT_CONFIG = xno; then
+   AC_MSG_ERROR(Couldn't find xslt-config, please install the libxslt package)
+fi
+
+dnl This should be remove as soon as we get a libxslt release out that supports pkg-config.
+XSLT_LIBS=`$XSLT_CONFIG --libs`
+XSLT_CFLAGS=`$XSLT_CONFIG --cflags`
+AC_SUBST(XSLT_CFLAGS)
+AC_SUBST(XSLT_LIBS)
+
 dnl
 dnl Check for gtk-doc
 dnl
@@ -152,11 +164,51 @@ AC_SUBST(GNOME_VFS_VERSION)
 AC_CHECK_LIB(popt, poptStrippedArgv,, AC_MSG_ERROR([popt 1.5 or newer is required to build
 gnome-libs. You can download the latest version from ftp://people.redhat.com/sopwith/popt/]))
 
+dnl ====================================
+dnl = zlib for help converters
+dnl ====================================
+AC_CHECK_LIB(z, gzopen, [Z_LIBS=-lz
+AC_SUBST(Z_LIBS)], AC_MSG_ERROR([*** zlib is required]))
+
+dnl ====================================
+dnl = Bzip2, for the help converters
+dnl ====================================
+BZ_LIBS=
+AC_CHECK_LIB(bz2, bzread, [AC_DEFINE(HAVE_LIBBZ2)
+			  BZ_LIBS="-lbz2"])
+dnl <= Check for bzip2 > 1.0.0
+    AC_CHECK_LIB(bz2, BZ2_bzread, [AC_DEFINE(HAVE_LIBBZ2)
+		      	  BZ_LIBS="-lbz2"
+    dnl <= define the wrapper-functions to get the Bzip2 stuff working .. =>	
+	   AC_DEFINE(bzread,BZ2_bzread)
+	   AC_DEFINE(bzopen,BZ2_bzopen)
+	   AC_DEFINE(bzdopen,BZ2_bzdopen)
+	   AC_DEFINE(bzwrite,BZ2_bzwrite)
+	   AC_DEFINE(bzerror,BZ2_bzerror)
+	   AC_DEFINE(bzclose,BZ2_bzclose)
+	   AC_DEFINE(bzflush,BZ2_bzflush)
+	   AC_DEFINE(bzCompress,BZ2_bzCompress)
+	   AC_DEFINE(bzCompressInit,BZ2_bzCompressInit)
+	   AC_DEFINE(bzDecompress,BZ2_bzDecompress)
+	   AC_DEFINE(bzDecompressInit,BZ2_bzDecompressInit)	
+	   ])
+    dnl =>
+AC_SUBST(BZ_LIBS)
+
 AC_OUTPUT([
 Makefile
 po/Makefile.in
 libgnome/Makefile
 libgnome/libgnome-2.0.pc
+help-converters/Makefile
+help-converters/docbook/Makefile
+help-converters/docbook/docbook/Makefile
+help-converters/docbook/docbook/common/Makefile
+help-converters/docbook/docbook/html/Makefile
+help-converters/docbook/docbook/lib/Makefile
+help-converters/docbook/gnome-customization/Makefile
+help-converters/man/Makefile
+help-converters/info/Makefile
 doc/Makefile
 doc/reference/Makefile
 tests/Makefile
