@@ -1,3 +1,8 @@
+2001-11-01  Anders Carlsson  <andersca@gnu.org>
+
+	* Copy the help converters from nautilus. We now depend on 
+	libxslt.
+
 2001-10-29  jacob berkman  <jacob@ximian.com>
 
 	* configure.in (AC_OUTPUT): add tests/Makefile
